# vendor_mediatek-opensource

./: mtk-builds.mk  mtk-interfaces.mk
frameworks/: Android.mk  mtk-frameworks.mk
frameworks/av/drm/: CleanSpec.mk
hardware/: Android.mk  mtk-hardware.mk
hardware/ccci/: Android.mk  ccci_lib.c  ccci_lib.h
hardware/ccci/platform/: ccci_lib_platform.c  ccci_lib_platform.h
hardware/connectivity/: Android.mk  connectivity_package.mk
hardware/connectivity/bluetooth/driver/mt76xx/boots/: .gitignore  .gn  Android.mk  BUILD.gn  Makefile  Makefile.rules  boots.c  boots.h  boots_btif.c  boots_btif.h  boots_cfg.h  boots_eth.c  boots_eth.h  boots_mt6xx.c  boots_mt6xx.h  boots_pkt.c  boots_pkt.h  boots_script.c  boots_skt.c  boots_skt.h  boots_srv.c  boots_uart.c  boots_uart.h  example.sh
hardware/connectivity/wapi-v2_lib/: Android.mk
hardware/consumerir/: Android.mk
hardware/consumerir/include/: consumerir_core.h
hardware/consumerir/src/: consumerir.c
hardware/libkmsetkey/: kmsetkey.cpp  kmsetkey.h  kmsetkey_ca.cpp
hardware/libkmsetkey/1.1/: Android.mk  KeymasterDevice.cpp  KeymasterDevice.h  kmattest.h  service.cpp  (+1 more)
hardware/thermal/: Android.mk  thermal_hal.c
system/: mtk-system.mk
system/netdagent/: Android.bp
trustzone/: mtk-trustzone.mk
trustzone/ClientLib/: Android.mk
trustzone/imsg_log/: Android.mk  imsg_log.c
trustzone/km4.0/: Android.bp  android.hardware.keymaster@4.0-service.beanpod.rc  service.cpp
trustzone/kmsetkey/: Android.mk  imsg_log.h  kmsetkey_ca.cpp  tee_client_api.h  ut_km_ioctl.cpp  ut_km_tac.cpp  ut_kmsetkey.cpp
(+676 files in other folders)
