#
# Copyright (C) 2021 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

group("bluetooth_boots") {
  deps = [
    "//:boots",
    "//:boots_srv",
  ]
}

executable("boots") {
  output_name = "boots"
  sources = [
    "boots.c",
    "boots_pkt.c",
    "boots_skt.c",
    "boots_eth.c",
    "boots_uart.c",
    "boots_script.c",
  ]
}

executable("boots_srv") {
  output_name = "boots_srv"
  sources = [
    "boots_srv.c",
    "boots_btif.c",
    "boots_pkt.c",
    "boots_skt.c",
    "boots_eth.c",
    "boots_mt6xx.c",
    "boots_uart.c",
    "boots_script.c",
  ]

  include_dirs = [
  ]

  deps = [
  ]

  cflags_c = [
  ]

  libs = [
  ]
}
